Chore: Replace `Collections` usage with modern alternatives (`List.of`, `Map.copyOf`), simplify string checks with `isBlank`, and update `BufferedReader` creation for better readability and performance